# cortex-ide

./: .factory  .gitignore  FRONTEND_AUDIT_BASELINE.md  PROJECT_STRUCTURE.md  TYPESCRIPT_AUDIT.md  VISUAL_BUGS_REPORT.md  audit-synthesis-report.md  bug-report-ipc.md  bug-report.md  error-catalog.md  eslint.config.mjs  frontend-api-service-audit.md  index.html  lint-errors.txt  package-lock.json  package.json  rust-compilation-audit.md  ts-errors.txt  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: BUILD.md  MCP-SERVER.md
docs/audits/: backend-architecture-audit.md  backend-security-audit.md  critical-fixes.md  frontend-architecture-audit.md  frontend-security-audit.md  mcp-remote-audit.md  performance-audit.md  quality-maintainability-audit.md  tests-deps-audit.md  tooling-quality-audit.md
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: client.test.ts  client.ts  index.ts  workspace-security.ts
mcp-server/test/: client.test.ts  workspace-security.test.ts
src/: App.tsx  AppCore.tsx  AppShell.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auto_update.rs  fs_commands.rs  lib.rs  process.rs  rules_library.rs  search.rs  ssh_terminal.rs  startup_timing.rs  system_specs.rs  tasks.rs  window.rs
src-tauri/src/ai/: completions.rs  mod.rs  openrouter_commands.rs  providers.rs  session.rs  storage.rs  tools.rs
src-tauri/src/ai/agents/: prompt_generation.rs
src-tauri/src/app/: git_commands.rs  misc_commands.rs  mod.rs  settings_commands.rs  tests.rs  workspace_commands.rs
src-tauri/src/collab/: auth.rs  commands.rs  crdt.rs  mod.rs  server.rs  session.rs
src-tauri/src/context_server/: commands.rs  transport.rs
src-tauri/src/dap/: client.rs  transport.rs
src-tauri/src/dap/commands/: session.rs  state.rs
src-tauri/src/dap/session/: breakpoints.rs  control.rs  core.rs  variables.rs
src-tauri/src/extensions/: permissions.rs
src-tauri/src/extensions/wasm/: host.rs
src-tauri/src/factory/: audit.rs  commands.rs  mod.rs
src-tauri/src/factory/executor/: helpers.rs
src-tauri/src/fs/: delta.rs  directory.rs  encoding.rs  mod.rs  operations.rs  types.rs  watcher.rs
src-tauri/src/git/: clone.rs  diff.rs  lfs.rs  merge.rs  merge_editor.rs  staging.rs  status.rs  watcher.rs  worktree.rs
src-tauri/src/lsp/: types.rs
src-tauri/src/lsp/client/: core.rs  extended_features.rs  language_features.rs
src-tauri/src/lsp/commands/: events.rs  server.rs  state.rs  symbols.rs
src-tauri/src/mcp/: bridge.rs  commands.rs  mod.rs  socket_server.rs
src-tauri/src/notebook/: kernel.rs
src-tauri/src/remote/: connection.rs  error.rs  manager.rs
src-tauri/src/repl/: kernel.rs
src-tauri/src/sandbox/: commands.rs
src-tauri/src/settings/: commands.rs  secure_store.rs  storage.rs  types.rs
src-tauri/src/terminal/: flow_control.rs  state.rs
src-tauri/src/testing/: execution.rs  watch.rs
src-tauri/src/workspace/: core.rs  mod.rs
src/api/: admin.test.ts  admin.ts  agents.ts  http.ts  share.ts
src/components/: AccessibilityHelp.tsx  ActivityIndicator.tsx  ApprovalDialog.tsx  ChatMessage.tsx  CodemapsSidebar.tsx  CommandPalette.tsx  FileExplorer.tsx  FileFinder.tsx  Journal.tsx  ResizeHandle.tsx  SearchEditor.tsx  SearchSidebar.tsx  SettingsDialog.tsx  TerminalGroupCommands.tsx  TerminalGroupSplitView.tsx  TerminalGroupTabs.tsx  TerminalPanel.tsx  TimelineView.tsx  TypeHierarchyView.tsx  WelcomePage.tsx  ZenMode.tsx
src/context/: AIContext.tsx  ActivityBarContext.tsx  AutoUpdateContext.tsx  CollabContext.tsx  ColorCustomizationsContext.tsx  CommandContext.tsx  CortexColorThemeContext.tsx  DebugContext.tsx  DiagnosticsContext.tsx  ExtensionHostContext.tsx  ExtensionsContext.tsx  FormatterContext.tsx  JournalContext.tsx  ModalActiveContext.tsx  MultiRepoContext.tsx  NodeExtensionHostContext.tsx  NotificationsContext.tsx  OptimizedProviders.tsx  QuickAccessContext.tsx  RecentProjectsContext.tsx  SDKContext.tsx  SSHContext.tsx  SearchContext.tsx  SettingsContext.tsx  SnippetsContext.tsx  StatusBarContext.tsx  TerminalsContext.tsx  ToastContext.tsx  TokenColorCustomizationsContext.tsx  VimContext.tsx  WindowsContext.tsx  WorkspaceContext.tsx  WorkspaceTrustContext.tsx  index.ts
src/design-system/: figma-specs.md
src/hooks/: useDebugSession.ts  useDiagnostics.ts  useKeyboard.ts
src/lib/: file-icons.ts  (+3 more)
(+349 files in other folders)
