[package]
name = "cortex-gui"
version = "0.0.6"
edition = "2024"
rust-version = "1.85"
authors = ["Cortex Team <team@cortex.foundation>"]
license = "MIT"
repository = "https://github.com/CortexLM/cortex-gui"
description = "Cortex GUI - AI-Powered Development Environment"

[lib]
name = "cortex_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.10", features = ["macos-private-api", "unstable"] }
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.6"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-process = "2.3"
tauri-plugin-os = "2.3"
tauri-plugin-notification = "2.3"
tauri-plugin-fs = "2.3"
tauri-plugin-mcp-bridge = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "io-util", "net", "fs", "process", "macros"] }
async-channel = "2"
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
open = "5"
ssh2 = { version = "0.9", optional = true }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
dirs = "5"
parking_lot = "0.12"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
chrono = { version = "0.4", features = ["serde"] }
# Async-only HTTP client - blocking feature removed to prevent sync blocking in async context
reqwest = { version = "0.12", features = ["json", "stream"] }
glob = "0.3"
walkdir = "2"
regex = "1"
rand = "0.8"
portable-pty = "0.8"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
base64 = "0.22"
trash = "5"
rayon = "1.10"
similar = "2"
lru = "0.16"
dashmap = "6"
yrs = "0.21"
tokio-tungstenite = "0.24"

# URL encoding
urlencoding = "2.1"
url = "2"

# AI/LLM dependencies
async-trait = "0.1"

# Data storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Git operations
git2 = "0.19"

# VSIX extraction
zip = "0.6"

# WASM extension runtime
wasmtime = { version = "29", features = ["cranelift"], optional = true }

# File encoding
encoding_rs = "0.8"
chardetng = "0.1"

# Memory-mapped files for large file read-only access
memmap2 = "0.9"

# Real-time collaboration (deps already declared above)

# Unix utilities
libc = "0.2"

# MCP support
interprocess = { version = "2.2", features = ["tokio"] }
enigo = "0.3"
image = { version = "0.24", optional = true }

# Note: plist and wry are provided by tauri and don't need direct dependencies

# Security - credential encryption
keyring = { version = "3", default-features = false, features = ["windows-native", "apple-native", "linux-native"] }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
win-screenshot = "4.0"
window-vibrancy = "0.5"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_Memory",
    "Win32_Globalization",
] }

[target.'cfg(target_os = "macos")'.dependencies]
xcap = "0.0.4"
window-vibrancy = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4"
tauri-plugin-updater = "2.10"
tauri-plugin-deep-link = "2.4"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol", "wasm-extensions", "remote-ssh", "image-processing"]
custom-protocol = ["tauri/custom-protocol"]
wasm-extensions = ["dep:wasmtime"]
remote-ssh = ["dep:ssh2"]
image-processing = ["dep:image"]

[profile.dev]
opt-level = 0
debug = 2

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
expect_used = "warn"
unwrap_used = "warn"
print_stdout = "allow"
print_stderr = "allow"
unnecessary_sort_by = "allow"
iter_without_into_iter = "allow"
module_inception = "allow"
derivable_impls = "allow"
